# AudioPlayer

./: AudioControl.qml  AudioInfoBox.qml  CMakeCache.txt  CMakeLists.txt  CustomComboBox.qml  EditPanel.qml  ImageButton.qml  Main.qml  MenuButton.qml  MetadataInfo.qml  PlaybackControl.qml  PlaybackSeekControl.qml  PlaylistItemDelegate.qml  PlaylistPanel.qml  TrackDelegate.qml  TrackEditPanel.qml  TrackList.qml  TracksInfo.qml  audioinfo.cpp  audioinfo.h  databasehandler.cpp  databasehandler.h  imagehandler.cpp  imagehandler.h  main.cpp  myaudioplayer.cpp  myaudioplayer.h  myitemmodel.cpp  myitemmodel.h  playercontroller.cpp  playercontroller.h
database/: my_audio_db.db
